fixed a visibility error causing the website to not work on mobile

--- a/src/components/MainPage/Main.module.css
+++ b/src/components/MainPage/Main.module.css
@@ -53,7 +53,7 @@
     width: 50%;
     height: 80px;
     font-size: 1.5rem;
-    border: 5px solid rgb(0, 149, 212);
+    border: 3px solid #008fcc;
     border-radius: 10px;
 }
 
