--- a/src/components/News/NewsItem/NewsItem.module.css
+++ b/src/components/News/NewsItem/NewsItem.module.css
@@ -5,22 +5,22 @@
     max-height:40vh;
     padding:10px;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     flex-direction: column;
     overflow-y: auto;
     color:white;
     background-color:#0000003e;
     border-left: 10px solid #FFDE59;
+
+    backdrop-filter: blur(5px);
 }
 .newsHolder::-webkit-scrollbar{
     background-color: transparent;
 }
-
 .newsHolder::-webkit-scrollbar-thumb{
     background-color: transparent;    
 }
 .newsHolder a{
-    width: 100%;
     text-align: left;
     color:blue;
 }
