--- a/src/components/Profiles/Profile.module.css
+++ b/src/components/Profiles/Profile.module.css
@@ -12,6 +12,7 @@
     align-items: center;
     justify-content: space-around;
     color:#fff;
+    backdrop-filter: blur(5px);
 
   grid-column-start: 1;
   grid-column-end: 3;
@@ -45,6 +46,7 @@
     align-items: center;
     justify-content: center;
     color:#fff;
+    backdrop-filter: blur(5px);
 
     grid-column-start: 3;
     grid-column-end: 5;
